--- a/CNN Implement.ipynb
+++ b/CNN Implement.ipynb
@@ -5,7 +5,7 @@
    "id": "a79367b7",
    "metadata": {},
    "source": [
-    "# CNN Implemention"
+    "#Implemention of Fully connected neutral network by pytorch"
    ]
   },
   {
